--- a/RedditObjC/Views/Base.lproj/Main.storyboard
+++ b/RedditObjC/Views/Base.lproj/Main.storyboard
@@ -6,70 +6,82 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Reddit-->
         <scene sceneID="MhS-hm-Wiy">
             <objects>
-                <tableViewController id="N4O-8j-Uh4" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="pt3-oA-7Wo">
+                <tableViewController id="N4O-8j-Uh4" customClass="PostsListTableViewController" customModule="RedditObjC" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="175" estimatedRowHeight="175" sectionHeaderHeight="28" sectionFooterHeight="28" id="pt3-oA-7Wo">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="wxX-Fl-Rrx">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </searchBar>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="161" id="plJ-3R-Jri" customClass="PostTableViewCell" customModule="RedditObjC" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="161"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="175" id="plJ-3R-Jri" customClass="PostTableViewCell" customModule="RedditObjC" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="72" width="375" height="175"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="plJ-3R-Jri" id="b2U-1b-DMx">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="160.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="174.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="lON-x7-y50">
-                                            <rect key="frame" x="10" y="10" width="355" height="140.5"/>
+                                            <rect key="frame" x="10" y="8" width="355" height="158.5"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="fDq-sH-btf">
-                                                    <rect key="frame" x="0.0" y="10" width="172.5" height="120.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="172.5" height="158.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9eg-WF-042">
-                                                            <rect key="frame" x="0.0" y="0.0" width="172.5" height="59.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9eg-WF-042">
+                                                            <rect key="frame" x="0.0" y="0.0" width="172.5" height="97.5"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eg1-ft-Ibu">
-                                                            <rect key="frame" x="0.0" y="69.5" width="172.5" height="20.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <rect key="frame" x="0.0" y="107.5" width="172.5" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Vd-Lj-glO">
-                                                            <rect key="frame" x="0.0" y="100" width="172.5" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="138" width="172.5" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="P33-sX-GbB">
-                                                    <rect key="frame" x="182.5" y="6.5" width="172.5" height="128"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="P33-sX-GbB">
+                                                    <rect key="frame" x="182.5" y="2" width="172.5" height="154.5"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="width" secondItem="P33-sX-GbB" secondAttribute="height" multiplier="355:128" id="63E-ET-eLL"/>
-                                                <constraint firstItem="fDq-sH-btf" firstAttribute="top" secondItem="lON-x7-y50" secondAttribute="top" constant="10" id="dYQ-zH-QqF"/>
-                                                <constraint firstAttribute="bottom" secondItem="fDq-sH-btf" secondAttribute="bottom" constant="10" id="evi-Gx-6Sq"/>
+                                                <constraint firstAttribute="bottom" secondItem="fDq-sH-btf" secondAttribute="bottom" id="RRs-mf-CKm"/>
+                                                <constraint firstItem="fDq-sH-btf" firstAttribute="top" secondItem="lON-x7-y50" secondAttribute="top" id="cLz-WL-2tY"/>
+                                                <constraint firstItem="fDq-sH-btf" firstAttribute="leading" secondItem="lON-x7-y50" secondAttribute="leading" id="pKK-Gd-p2g"/>
                                             </constraints>
                                         </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="lON-x7-y50" secondAttribute="trailing" constant="10" id="0wS-ZX-fhi"/>
-                                        <constraint firstAttribute="bottom" secondItem="lON-x7-y50" secondAttribute="bottom" constant="10" id="Sg8-UQ-ghm"/>
-                                        <constraint firstItem="lON-x7-y50" firstAttribute="top" secondItem="b2U-1b-DMx" secondAttribute="top" constant="10" id="W1h-Tk-MfW"/>
-                                        <constraint firstItem="lON-x7-y50" firstAttribute="leading" secondItem="b2U-1b-DMx" secondAttribute="leading" constant="10" id="akp-nR-5AJ"/>
+                                        <constraint firstAttribute="trailing" secondItem="lON-x7-y50" secondAttribute="trailing" constant="10" id="1S5-xW-x68"/>
+                                        <constraint firstAttribute="bottom" secondItem="lON-x7-y50" secondAttribute="bottom" constant="8" id="4Pf-Iu-sxy"/>
+                                        <constraint firstItem="lON-x7-y50" firstAttribute="top" secondItem="b2U-1b-DMx" secondAttribute="top" constant="8" id="Agw-5u-ahS"/>
+                                        <constraint firstItem="lON-x7-y50" firstAttribute="leading" secondItem="b2U-1b-DMx" secondAttribute="leading" constant="10" id="LYm-my-Gz0"/>
+                                        <constraint firstItem="lON-x7-y50" firstAttribute="centerX" secondItem="b2U-1b-DMx" secondAttribute="centerX" id="jZG-56-u9c"/>
+                                        <constraint firstItem="lON-x7-y50" firstAttribute="centerY" secondItem="b2U-1b-DMx" secondAttribute="centerY" id="kSg-Xx-D3g"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="commentCountLabel" destination="4Vd-Lj-glO" id="O7i-gz-dof"/>
+                                    <outlet property="postImageView" destination="P33-sX-GbB" id="299-Fq-WZE"/>
+                                    <outlet property="titleLabel" destination="9eg-WF-042" id="yaG-FQ-1oG"/>
+                                    <outlet property="upsLabel" destination="eg1-ft-Ibu" id="aze-GK-pGw"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -78,6 +90,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Reddit" id="qDX-UZ-VI2"/>
+                    <connections>
+                        <outlet property="searchBar" destination="wxX-Fl-Rrx" id="4ta-R7-dim"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ltD-Ik-Rmh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -88,9 +103,10 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4pl-un-LP3" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="7je-yX-G9r">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" largeTitles="YES" id="7je-yX-G9r">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" red="0.98823529409999999" green="0.25490196079999999" blue="0.15686274510000001" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
