--- a/RedditObjC/Views/Base.lproj/Main.storyboard
+++ b/RedditObjC/Views/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" id="wxX-Fl-Rrx">
+                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search Reddit" id="wxX-Fl-Rrx">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <textInputTraits key="textInputTraits"/>
@@ -63,7 +63,6 @@
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="fDq-sH-btf" secondAttribute="bottom" id="RRs-mf-CKm"/>
                                                 <constraint firstItem="fDq-sH-btf" firstAttribute="top" secondItem="lON-x7-y50" secondAttribute="top" id="cLz-WL-2tY"/>
-                                                <constraint firstItem="fDq-sH-btf" firstAttribute="leading" secondItem="lON-x7-y50" secondAttribute="leading" id="pKK-Gd-p2g"/>
                                             </constraints>
                                         </stackView>
                                     </subviews>
